After finishing Address,Person and Authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,13 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 #server.port=8081
+
+# App Properties
+blocadmin.app.jwtSecret= blocadminSecretKey
+#blocadmin.app.jwtExpirationMs= 3600000
+#blocadmin.app.jwtRefreshExpirationMs= 86400000
+
+
+#For test
+blocadmin.app.jwtExpirationMs= 60000
+blocadmin.app.jwtRefreshExpirationMs= 100000
