--- a/pom.xml
+++ b/pom.xml
@@ -52,9 +52,18 @@
 			<artifactId>spring-boot-maven-plugin</artifactId>
 			<version>2.5.5</version>
 		</dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
 
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
