Finishing list,add,updatefor 8 main classes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,10 +12,12 @@ spring.jpa.show-sql=true
 
 # App Properties
 blocadmin.app.jwtSecret= blocadminSecretKey
-#blocadmin.app.jwtExpirationMs= 3600000
-#blocadmin.app.jwtRefreshExpirationMs= 86400000
+blocadmin.app.jwtExpirationMs= 36000000
+blocadmin.app.jwtRefreshExpirationMs= 864000000
 
 
 #For test
-blocadmin.app.jwtExpirationMs= 60000
-blocadmin.app.jwtRefreshExpirationMs= 100000
+#blocadmin.app.jwtExpirationMs= 60000
+#blocadmin.app.jwtRefreshExpirationMs= 100000
+
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
