To check how to open link from email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,15 @@ spring.datasource.username=postgres
 spring.datasource.password=POSTGRESSQL
 spring.jpa.properties.hibernate.default_schema = application
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-# Hibernate ddl property
-spring.jpa.hibernate.ddl-auto=create-drop
+# Hibernate ddl property (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 #server.port=8081
+
+#FileDB
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
+
 
 # App Properties
 blocadmin.app.jwtSecret= blocadminSecretKey
@@ -21,3 +26,23 @@ blocadmin.app.jwtRefreshExpirationMs= 864000000
 #blocadmin.app.jwtRefreshExpirationMs= 100000
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
+
+#Mail configuration
+debug=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=oleg.baxan.text@gmail.com
+spring.mail.password=11oyCR2S6yag
+
+# Other properties
+spring.mail.properties.mail.debug=true
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# TLS , port 587
+spring.mail.properties.mail.smtp.starttls.enable=true
