--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,15 @@ spring.datasource.username=postgres
 spring.datasource.password=POSTGRESSQL
 spring.jpa.properties.hibernate.default_schema = application
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+#MSSQL
+#spring.datasource.url=jdbc:sqlserver://localhost;databaseName=BlocAdmin
+#spring.datasource.username=test
+#spring.datasource.password=MSSQL2014
+#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServer2012Dialect
+
+
+
 # Hibernate ddl property (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
