--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -17,7 +17,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 # Hibernate ddl property (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-#server.port=8081
+server.port=8081
 
 #FileDB
 spring.servlet.multipart.max-file-size=2MB
@@ -55,6 +55,3 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 
 # TLS , port 587
 spring.mail.properties.mail.smtp.starttls.enable=true
-
-
-allowed.origins=https://blocadmin-angularui.herokuapp.com/
