Update Controllers @CrossOrigin(maxAge = 3600, allowCredentials = "true",origins = "https://blocadmin-angularui.herokuapp.com/")

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -57,4 +57,4 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 
-allowed.origins=https://blocadmin-angularui.herokuapp.com/
+#allowed.origins=https://blocadmin-angularui.herokuapp.com/
